Change grid-gap to 1rem to avoid overflow at smaller screen sizes.

--- a/css/custom.css
+++ b/css/custom.css
@@ -201,8 +201,10 @@ img {
 	overflow: auto;
 }
 .ja-chat-container {
+	border: 1px solid #fff;
 	display: grid;
-	grid-gap: 2rem;
+	grid-gap: 1rem;
+	grid-template-columns: 1fr 3fr;
 	grid-template-areas: 
 		'title title'
 		'sidebar chatbox'
@@ -219,6 +221,7 @@ img {
 }
 .ja-sidebar {
 	grid-area: sidebar;
+	overflow: auto;
 }
 .ja-chatbox {
 	grid-area: chatbox;
